Fix spacing between video previews

--- a/styles/video.css
+++ b/styles/video.css
@@ -52,5 +52,5 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
-  row-gap: 40px;
+  row-gap: 42px;
 }
